--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #170231; /*Usando a cor purple1*/
+    background-color: #170231; /*Usando a cor purple1 para esse background*/
     color: rgb(255, 255, 255);   
     min-height: 400px; 
 }
