--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-
+a{
+  text-decoration: none;
+  color: inherit;
+}
 body::-webkit-scrollbar {
   display: none;
 }
